let's make javaOptions have better memory settings (for re-start)